Added duplicate file detection

--- a/templates/base.html
+++ b/templates/base.html
@@ -16,7 +16,7 @@
     <a class="navbar-brand" href="/">lakeview</a>
 </nav>
 
-<main role="main" class="container">
+<main role="main" class="container-fluid">
     {% block content %}{% endblock %}
 </main><!-- /.container -->
 
